error msg overflow fixed

--- a/style.css
+++ b/style.css
@@ -817,6 +817,7 @@ body::selection {
 
   .email-form {
     width: 100%;
+    height: auto;
   }
 
 
